# CPPStructs

./: CMakeLists.txt  compile.bash
include/: dicts.hpp
src/: dicts.cpp
